<resources>
    <string name="app_name">Swapify</string>
    <string name="facebook_app_id">927834800603065</string>

    <string name="add_flight">Add Flight</string>
    <string name="current_flights">Current Flights</string>
    <string name="action_settings">Settings</string>

    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="title_activity_add_flight">AddFlightActivity</string>
    <string name="title_activity_flight">FlightActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_scan_qr_activity">ScanQRCodeActivity</string>

    <string name="flight_no">Flight No.</string>
    <string name="carrier">Carrier</string>
    <string name="seat_no">Seat No.</string>
    <string name="choose_date">Departure Date</string>
    <string name="flight_no_ex">Ex. 101</string>
    <string name="carrier_ex">Ex. AA</string>
    <string name="seat_no_ex">Ex. 30A</string>
    <string name="save_flight_info">Save My Flight</string>

    <string name="choose_activity">Flight info saved!</string>
    <string name="go_current">See current flights</string>
    <string name="add_more">Add another flight</string>

    <string name="swap_seat">SWAP</string>
    <string name="swap_requests">Swap Requests</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="incoming">Incoming Requests</string>
    <string name="outgoing">Outgoing Requests</string>

    <string name="accept_or_decline">Are you going to accept the requeset?</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="cancel_or_not">Are you sure you want to cancel the request?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="my_seat_fmt">My seat: %s</string>

    <string name="save_request">Swap request saved!</string>
    <string name="already_exist">This request already exist!</string>
    <string name="go_requests">See current swap requests</string>
    <string name="make_req">Make another request</string>

    <string name="flight_add_error">Uh oh, we can\'t find seem to find that flight</string>
    <string name="flight_add_error_message">Double check your dates and flight info</string>
    <string name="flight_add_error_cancel">Try again</string>

    <string name="user_exists_error">You\'ve already registered this flight</string>
    <string name="user_exists_error_message">You can cancel this flight by going to settings</string>
    <string name="user_exists_error_cancel">Ok</string>

    <string name="select_date">Select your departure date</string>
    <string name="date_selected"></string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="scan_qr_cancel">Cancel</string>

    <string name="delete_user_flight_msg">Are you sure you want to delete this flight?</string>
    <string name="delete_user_flight_yes">Yes</string>
    <string name="delete_user_flight_no">No</string>
    <string name="sample_route"><![CDATA[Toronto (YYZ) -> Ottawa (YUZ)]]></string>
    <string name="sample_time">Jan. 4, 2015 - 4:50 PM</string>
    <string name="active_request">Active Requests</string>
    <string name="logout">Are you sure you want to log out?</string>
</resources>
