<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="swapify.com.swapify.AddFlightActivity">

    <LinearLayout
        android:id="@+id/add_flight_title_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2D45A3">

        <TextView
            android:id="@+id/add_flight_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Add Flight"
            android:textColor="#fff"
            android:textSize="30sp"
            android:padding="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/add_flight_title_box"
        >

        <LinearLayout
            android:id="@+id/carrier_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/carrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrier"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_carrier"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/carrier_ex" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/flight_no_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flight_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_no"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_flight_no"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="end"
                android:hint="@string/flight_no_ex" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/seat_no_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seat_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_no"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_seat_no"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/seat_no_ex" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_picker_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_chooser_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_date"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/date_chooser_text_edit"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"/>

        </LinearLayout>

        <Button android:id="@+id/save_flight_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_flight_info"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/or_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="or"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>


        <Button android:id="@+id/scan_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>



</RelativeLayout>
